--- a/core/SConscript
+++ b/core/SConscript
@@ -6,5 +6,5 @@ swig = env.Clone()
 swig.Append(CPPPATH = [distutils.sysconfig.get_python_inc()])
 swig.Replace(SWIGFLAGS = ['-c++', '-python'])
 swig.Replace(SHLIBPREFIX = "")
-swig.Append(LIBS = Split("geo geo_io 2d utils jeeps loaders tiff jpeg png"))
+swig.Append(LIBS = Split("geo_io geo 2d fig utils jeeps loaders tiff jpeg png curl gd"))
 swig.SharedLibrary("_core.so", ["swig.i"])
