--- a/experimental/gred/Makefile
+++ b/experimental/gred/Makefile
@@ -8,9 +8,9 @@ all: simple_viewer_test1 simple_viewer_test2\
       mthread_viewer_test1 mthread_viewer_test2\
       simple_rubb_viewer_test2
 
-simple_viewer_test1: simple_viewer.h gplane.h
-simple_viewer_test2: simple_viewer.h gplane.h
-mthread_viewer_test1: mthread_viewer.h gplane.h
-mthread_viewer_test2: mthread_viewer.h gplane.h
+simple_viewer_test1:  gplane.o simple_viewer.o
+simple_viewer_test2:  gplane.o simple_viewer.o
+mthread_viewer_test1: gplane.o simple_viewer.o
+mthread_viewer_test2: gplane.o simple_viewer.o
 
 simple_rubb_viewer_test2:
