--- a/experimental/gred/Makefile
+++ b/experimental/gred/Makefile
@@ -9,7 +9,8 @@ all: simple_viewer_test1\
      mthread_viewer_test1\
      mthread_viewer_test2\
      simple_rubb_viewer_test1\
-     simple_rubb_viewer_test2
+     simple_rubb_viewer_test2\
+     mthread_rubb_viewer_test1
 
 simple_viewer_test1:  gplane.o simple_viewer.o
 simple_viewer_test2:  gplane.o simple_viewer.o
@@ -17,3 +18,5 @@ mthread_viewer_test1: gplane.o simple_viewer.o mthread_viewer.o
 mthread_viewer_test2: gplane.o simple_viewer.o mthread_viewer.o
 simple_rubb_viewer_test1: gplane.o simple_viewer.o
 simple_rubb_viewer_test2: gplane.o simple_viewer.o
+mthread_rubb_viewer_test1: gplane.o simple_viewer.o mthread_viewer.o
+
