--- a/experimental/gred/Makefile
+++ b/experimental/gred/Makefile
@@ -12,7 +12,8 @@ TARGETS=simple_viewer_test1\
      dthread_viewer_test2\
      simple_rubb_viewer_test1\
      simple_rubb_viewer_test2\
-     mthread_rubb_viewer_test1
+     mthread_rubb_viewer_test1\
+     dthread_rubb_viewer_test1
 
 all: $(TARGETS)
 clean:
@@ -28,4 +29,5 @@ dthread_viewer_test2: gplane.o simple_viewer.o dthread_viewer.o
 simple_rubb_viewer_test1: gplane.o simple_viewer.o
 simple_rubb_viewer_test2: gplane.o simple_viewer.o
 mthread_rubb_viewer_test1: gplane.o simple_viewer.o mthread_viewer.o
+dthread_rubb_viewer_test1: gplane.o simple_viewer.o dthread_viewer.o
 
