gred: add action_viewer.h and action_viewer_test1.cpp

--- a/experimental/gred/Makefile
+++ b/experimental/gred/Makefile
@@ -13,7 +13,8 @@ TARGETS=simple_viewer_test1\
      simple_rubb_viewer_test1\
      simple_rubb_viewer_test2\
      mthread_rubb_viewer_test1\
-     dthread_rubb_viewer_test1
+     dthread_rubb_viewer_test1\
+     action_viewer_test1
 
 all: $(TARGETS)
 clean:
@@ -30,8 +31,13 @@ simple_rubb_viewer_test1: gplane.o simple_viewer.o
 simple_rubb_viewer_test2: gplane.o simple_viewer.o
 mthread_rubb_viewer_test1: gplane.o simple_viewer.o mthread_viewer.o
 dthread_rubb_viewer_test1: gplane.o simple_viewer.o dthread_viewer.o
+action_viewer_test1: gplane.o simple_viewer.o dthread_viewer.o
 
 gplane.o: gplane.h
 dthread_viewer.o: dthread_viewer.h
 mthread_viewer.o: mthread_viewer.h
 simple_viewer.o: simple_viewer.h
+simple_rubb_viewer_test1.o simple_rubb_viewer_test2.o \
+  mthread_rubb_viewer_test1.o dthread_rubb_viewer_test1.o: rubber_viewer.h
+
+action_viewer_test1.o: rubber_viewer.h action_viewer.h
