add convs_map2pt program; move convs_nom and convs_pt2pt to programs dir

--- a/core/libfig/SConscript
+++ b/core/libfig/SConscript
@@ -9,4 +9,7 @@ env.Library('fig', \
      """))
 
 libs=Split("fig utils 2d")
-env.Program("fig_test.cpp",  LIBS=[libs])
+env.Program("catfig.cpp",  LIBS=[libs])
+
+env.Install('/usr/bin/', ['catfig'])
+
