--- a/core/libmp/SConscript
+++ b/core/libmp/SConscript
@@ -8,4 +8,6 @@ env.Library('mp', \
      """))
 
 libs=Split("mp utils 2d")
-env.Program("mp_test.cpp",  LIBS=[libs])
+env.Program("catmp.cpp",  LIBS=[libs])
+env.Install('/usr/bin/', ['catmp'])
+
