geo_convs: use libproj instead of jeeps

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -3,7 +3,7 @@ env_gtk = env.Clone()
 env_geo = env.Clone()
 
 mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils 2d")
-other_libs   = Split ("usb tiff jpeg png gd curl")
+other_libs   = Split ("usb tiff jpeg png gd curl proj")
 
 env_gtk.Prepend(LIBS=["viewer", mapsoft_libs,other_libs])
 env_gtk.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
