--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -2,7 +2,7 @@ Import ('env')
 le = env.Clone()
 
 mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils 2d")
-other_libs   = Split ("usb tiff jpeg png gd curl")
+other_libs   = Split ("usb tiff jpeg png gd curl proj")
 le.Prepend(LIBS=[mapsoft_libs,other_libs])
 le.ParseConfig('pkg-config --cflags --libs gtkmm-2.4,gthread-2.0')
 
