--- a/vector/libzn-utils/SConscript
+++ b/vector/libzn-utils/SConscript
@@ -1,7 +1,7 @@
 Import ('env')
 
 mapsoft_libs = Split ("zn geo_io geo loaders jeeps fig mp utils 2d")
-other_libs   = Split ("curl usb tiff jpeg png gd yaml")
+other_libs   = Split ("curl usb tiff jpeg png gd yaml proj")
 
 env1 = env.Clone()
 env1.Prepend(LIBS=[mapsoft_libs,other_libs])
