lib2d/image.h: rewrite memory management

--- a/core/lib2d/SConscript
+++ b/core/lib2d/SConscript
@@ -1,7 +1,9 @@
 Import ('env')
-env.Library('2d', \
-    Split ("""
-        point_int.cpp
-        rect.cpp
-     """))
+
+src=Split ("""
+    point_int.cpp
+    rect.cpp
+""")
+
+env.Library('2d', src)
 
