--- a/vector/libzn-data/SConscript
+++ b/vector/libzn-data/SConscript
@@ -1,4 +1,5 @@
 Import ('env')
 
-env.Alias('install', '/usr/share/mapsoft/')
-env.Install('/usr/share/mapsoft/', ['pics', 'mmb.cnf', 'hr.cnf'])
+env.Install(env.datadir, Split("""
+  pics mmb.cnf hr.cnf
+"""))
