gred: move rubber into separate object connected with viewer by some signals

--- a/experimental/gred/Makefile
+++ b/experimental/gred/Makefile
@@ -1,7 +1,7 @@
 LDFLAGS= -L../../core/lib2d
 LDLIBS= -l2d `pkg-config --libs gtkmm-2.4,gthread-2.0`
 
-CPPFLAGS=`pkg-config --cflags gtkmm-2.4`
+CPPFLAGS=`pkg-config --cflags gtkmm-2.4` -g
 
 TARGETS=\
   simple_viewer_test1\
