gred: move tests to ./tests dir

--- a/experimental/gred/Makefile.am
+++ b/experimental/gred/Makefile.am
@@ -8,41 +8,6 @@ libgred_a_SOURCES =\
   mthread_viewer.cpp\
   dthread_viewer.cpp
 
-
-LDADD =\
- libgred.a\
- ../../core/lib2d/lib2d.a\
- $(GTKMM_LIBS)
-
 INCLUDES = $(GTKMM_CFLAGS)
 
-bin_PROGRAMS =\
-  simple_viewer_test1\
-  simple_viewer_test2\
-  mthread_viewer_test1\
-  mthread_viewer_test2\
-  dthread_viewer_test1\
-  dthread_viewer_test2\
-  simple_rubb_viewer_test1\
-  simple_rubb_viewer_test2\
-  mthread_rubb_viewer_test1\
-  dthread_rubb_viewer_test1\
-  action_viewer_test1\
-  action_viewer_test2\
-  action_viewer_test3\
-  viewer_test
-
-simple_viewer_test1_SOURCES = simple_viewer_test1.cpp
-simple_viewer_test2_SOURCES = simple_viewer_test2.cpp
-mthread_viewer_test1_SOURCES = mthread_viewer_test1.cpp
-mthread_viewer_test2_SOURCES = mthread_viewer_test2.cpp
-dthread_viewer_test1_SOURCES = dthread_viewer_test1.cpp
-dthread_viewer_test2_SOURCES = dthread_viewer_test2.cpp
-simple_rubb_viewer_test1_SOURCES = simple_rubb_viewer_test1.cpp
-simple_rubb_viewer_test2_SOURCES = simple_rubb_viewer_test2.cpp
-mthread_rubb_viewer_test1_SOURCES = mthread_rubb_viewer_test1.cpp
-dthread_rubb_viewer_test1_SOURCES = dthread_rubb_viewer_test1.cpp
-action_viewer_test1_SOURCES = action_viewer_test1.cpp
-action_viewer_test2_SOURCES = action_viewer_test2.cpp
-action_viewer_test3_SOURCES = action_viewer_test3.cpp
-viewer_test_SOURCES = viewer_test.cpp
+SUBDIRS = . tests
