gred: move test gobjs into ./test dir

--- a/experimental/gred/Makefile.am
+++ b/experimental/gred/Makefile.am
@@ -3,10 +3,10 @@ noinst_LIBRARIES = libgred.a
 libgred_a_SOURCES =\
   actions.cpp\
   rubber.cpp\
-  gobj.cpp\
   simple_viewer.cpp\
   mthread_viewer.cpp\
-  dthread_viewer.cpp
+  dthread_viewer.cpp\
+  gobj_solid_fill.cpp
 
 INCLUDES = $(GTKMM_CFLAGS)
 
