add iterator support for cache

--- a/core/utils/tests/SConscript
+++ b/core/utils/tests/SConscript
@@ -2,5 +2,6 @@ Import ('env')
 le = env.Clone()
 
 le.Program('generic_accessor_unittest', 'generic_accessor_unittest.cpp', LIBS=['utils'])
+le.Program('cache_test', 'cache_test.cpp', LIBS=['utils'])
 # le.Program('options_test', 'options_test.cpp', LIBS=['utils'])
 
