--- a/vector/mp2png/SConstruct
+++ b/vector/mp2png/SConstruct
@@ -5,6 +5,7 @@ subdirs = Split ("""
                 core/lib2d
                 core/loaders
                 core/utils
+                core/options
                 core/libgeo_io
                 core/libgeo
                 core/libmp
@@ -13,7 +14,7 @@ subdirs = Split ("""
 env.Append (CCFLAGS=['-O2'])
 env.Append (CPPPATH = "../../core")
 env.Append (LIBPATH = map(lambda(s): "../../"+s, subdirs) )
-env.Append (LIBS = Split("mp geo_io geo loaders utils 2d proj png jpeg tiff") )
+env.Append (LIBS = Split("mp geo_io geo loaders utils options 2d proj png jpeg tiff") )
 
 env.ParseConfig('pkg-config --cflags --libs cairomm-1.0,freetype2')
 
