--- a/vector/vmap3/SConstruct
+++ b/vector/vmap3/SConstruct
@@ -5,6 +5,7 @@ subdirs = Split ("""
                 core/lib2d
                 core/loaders
                 core/utils
+                core/options
                 core/libgeo_io
                 core/libgeo
                 core/libmp
@@ -15,7 +16,7 @@ env.Append (CCFLAGS=['-O2'])
 env.Append (CPPPATH = ["../../core", "../libzn"])
 env.Append (LIBPATH = map(lambda(s): "../../"+s, subdirs) )
 env.Append (LIBPATH = "../libzn" )
-env.Append (LIBS = Split("zn mp fig geo_io geo loaders utils 2d proj png jpeg tiff yaml") )
+env.Append (LIBS = Split("zn mp fig geo_io geo loaders utils options 2d proj png jpeg tiff yaml") )
 
 env.ParseConfig('pkg-config --cflags --libs cairomm-1.0,freetype2')
 
