vector/vmap3: add border and some map parameters

--- a/vector/libzn-data/mmb.cnf
+++ b/vector/libzn-data/mmb.cnf
@@ -528,4 +528,8 @@
 -
   name: text object
   mp:   POLYLINE 0xFF 0 0
-  fig:  2 1 0 1 4 7 52 -1 -1 0.000 0 0 7 0 0 0
+  fig:  2 1 0 1 4 7 42 -1 -1 0.000 0 0 7 0 0 0
+-
+  name: border object
+  mp:   POLYLINE 0xFE 0 0
+  fig:  2 1 0 1 5 7 41 -1 -1 0.000 0 0 7 0 0 0
