move new cmdline parser to core/options/m_getopt.h

--- a/core/options/SConscript
+++ b/core/options/SConscript
@@ -6,6 +6,7 @@ env.Library('options', \
     read_conf.cpp
     m_time.cpp m_color.cpp
     strvec.cpp
+    m_getopt.cpp
   """))
 
 SConscript ("tests/SConscript")
