vector/vmap3: cleanup code, move filtering outside io functions

--- a/vector/vmap3/SConstruct
+++ b/vector/vmap3/SConstruct
@@ -4,6 +4,11 @@ env.Library('vmap', \
     Split ("""
      vmap.cpp
      vmap_file.cpp
+     vmap_fig.cpp
+     vmap_mp.cpp
+     vmap_cnv.cpp
+     vmap_filt.cpp
+     vmap_labels.cpp
     """))
 
 subdirs = Split ("""
