vmap_render: use pictures autogenerated from fig pics

--- a/vector/libzn-data/SConscript
+++ b/vector/libzn-data/SConscript
@@ -1,5 +1,7 @@
 Import ('env')
 
 env.Install(env.datadir, Split("""
-  pics mmb.cnf hr.cnf default.cnf
+  pics/ mmb.cnf hr.cnf default.cnf
 """))
+
+env.Install(env.datadir, Split("pics/*.fig pics/*.png"))
