improve vmap_render

--- a/vector/libzn-data/pics/Makefile
+++ b/vector/libzn-data/pics/Makefile
@@ -1,7 +1,7 @@
 pics=avt kladb cross cerkov pam ohotn bash shaht razv trig trig_hr\
   kan ldp per per1a per1b per2a per2b per3a per3b pernk kladb\
   pupyr yama skala\
-  bol_l bol_h redk vyr_n vyr_o ledn zd
+  bol_l bol_h redk vyr_n vyr_o ledn zd ur_vod por vdp
 
 # vertical position of the image center in % counted from top
 bash.png.cnt=77
