move vector/libzn and part of vector/vmap3 to core/vmap

--- a/vector/compat/Sconstruct
+++ b/vector/compat/Sconstruct
@@ -1,11 +1,11 @@
 env = Environment()
 
-libs = Split("fig options utils 2d")
+libs = Split("vmap fig options utils 2d")
 
 env.Append (CCFLAGS=['-O2'])
-env.Append (CPPPATH = ["../../core", "../libzn"])
+env.Append (CPPPATH = ["../../core"])
 env.Append (LIBPATH = map(lambda(s): "../../core/"+s, libs) )
-env.Append (LIBPATH = ["../libzn", "."] )
+env.Append (LIBPATH = ["."] )
 env.Prepend(LIBS=libs)
 
 env.Program(['fig_old2new.cpp','zn_key.cpp'])
